# swagger.json
@@ -258,7 +258,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/UpdatePointRequest"
+                "$ref": "#/components/schemas/AddPoint"
               }
             }
           }
@@ -530,9 +530,6 @@
             "_id": {
               "type": "string"
             },
-            "id": {
-              "type": "string"
-            },
             "title": {
               "type": "string"
             },
@@ -550,7 +547,6 @@
         "example": [
           {
             "_id": "642fe9e82510b50890683954",
-            "id": "1",
             "title": "Дом с химерами",
             "description": "Будинок Городецького.Известное здание в стиле модерн: резиденция президента, галереи и скульптуры животных.",
             "img": "img.png",
@@ -561,6 +557,36 @@
             ]
           }
         ]
+      },
+      "AddPoint": {
+        "type": "object",
+        "properties": {
+          "title": {
+            "type": "string",
+            "description": "Title of the points"
+          },
+          "description": {
+            "type": "string",
+            "description": "description"
+          },
+          "img": {
+            "type": "string",
+            "description": "Address img"
+          },
+          "coordinates": {
+            "type": [],
+            "description": "Array point coordinates"
+          }
+        },
+        "example": {
+          "title": "Дом с химерами",
+          "description": "Будинок Городецького.Известное здание в стиле модерн: резиденция президента, галереи и скульптуры животных.",
+          "img": "img.png",
+          "coordinates": [
+            50.4339063,
+            30.5552953
+          ]
+        }
       },
       "UpdatePointRequest": {
         "type": "object",
@@ -588,7 +614,7 @@
           }
         },
         "example": {
-          "id": "1",
+          "id": "642fe9e82510b50890683954",
           "title": "Дом с химерами",
           "description": "Будинок Городецького.Известное здание в стиле модерн: резиденция президента, галереи и скульптуры животных.",
           "img": "img.png",
